--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,10 +57,11 @@ dependencies:
   webview_flutter_wkwebview: ^3.9.4
   device_preview: ^1.1.0
   otp_text_field: ^1.1.3
-  firebase_auth: ^4.15.2
-  firebase_core: ^2.24.2
+  firebase_auth: ^5.1.2
+  firebase_core: ^3.2.0
   country_picker: ^2.0.23
   phone_otp_verification: ^1.0.3
+  flutter_otp_text_field: ^1.1.3+2
 
 dev_dependencies:
   flutter_test:
